test/tests/bad/wrong-main-type.carth
;; WrongMainType

(defvar main :of Int (undefined Unit))
